2009-10-26  Robert Richter <robert.richter@amd.com>

	* doc/oprofile.1.in: fix user-space daemon logfile in man page

2009-10-26  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/bfd_support.cpp:
	* libutil++/bfd_support.h: Fix regression in handling separate
	  debuginfo files 

2009-10-23  Robert Richter  <robert.richter@amd.com>

	* autogen.sh: create copies with libtoolize instead of symlinks

2009-10-23  Suravee Suthikulpanit  <suravee.suthikulpanit@amd.com>

	* events/x86-64/family10/events:
	* events/x86-64/family10/unit_masks: Update events and unitmasks
	  from publication 31116 revision 3.34 and fixes

2009-10-23  Maynard Johnson  <maynardj@us.ibm.com>

	* README_PACKAGERS: Add mention of new opjitconv binary

2009-10-14  Maynard Johnson  <maynardj@us.ibm.com>

	* agents/jvmpi/jvmpi_oprofile.cpp: Add extra #includes since new
	  libstdc++ header files do not include standard C header files

2009-10-13  Maynard Johnson  <maynardj@us.ibm.com>

	* utils/opcontrol: Remove incorrect redundant invocation of
	  get_image_range

2009-10-09  Robert Richter <robert.richter@amd.com>

	* libop/op_xml_events.c:
	* libop/op_xml_out.c:
	* libop/op_xml_out.h:
	* libutil++/xml_output.cpp: fix buffer overflows in xml generator

2009-09-14  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* utils/opcontrol: Fix timer mode

2009-09-08  Robert Richter <robert.richter@amd.com>

	* utils/opcontrol: fix deinit; kill daemon only if running to prevent
	  unnecessary "Daemon not running" message

2009-09-08  Robert Richter <robert.richter@amd.com>

	* utils/opcontrol: fix help message

2009-09-04  Robert Richter <robert.richter@amd.com>

	* utils/opcontrol: Do stop only if enabled

2009-08-20  Suravee Suthikulpanit <suravee.suthikulpanit@amd.com>

	* libop/op_xml_events.c: 
	* libop/op_xml_out.h: 
	* libop/op_xml_out.c: Fix ophelp -X output for IBS events
	* utils/ophelp.c: Fix ophelp output for "counter:cpuid" and 
	  "ext:xxx" case.
